# opensmtpd-filters

./: .gitignore  README.md  dmarc2html.py  filter.py  opensmtpd.py  pyproject.toml
src/opensmtpd_filters/: dkimsign.py  dkimverify.py  dmarc2html.py  dmarc2html_cli.py  dmarc2html_filter.py  opensmtpd.py
src/opensmtpd_filters/templates/: output.html
